--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>org.jacoco</groupId>
   <artifactId>root</artifactId>
-  <version>0.7.8-SNAPSHOT</version>
+  <version>0.7.8</version>
   <packaging>pom</packaging>
 
   <modules>
