--- a/org.jacoco.ant/pom.xml
+++ b/org.jacoco.ant/pom.xml
@@ -67,6 +67,41 @@
                   <shadedPattern>org.jacoco.asm</shadedPattern>
                 </relocation>
               </relocations>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <manifestEntries>
+                    <Implementation-Title>${project.description}</Implementation-Title>
+                    <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
+                    <Implementation-Version>${project.version}</Implementation-Version>
+                  </manifestEntries>
+                </transformer>
+              </transformers>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <executions>
+          <execution>
+            <!--
+            None of resource tranformers from maven-shade-plugin
+            (including combination of DontIncludeResourceTransformer and ManifestResourceTransformer)
+            does not allow us to leave only desired entries and remove others from META-INF/MANIFEST.MF
+            So we use goal "bundle" instead of "manifest".
+            This introduces some redundant operations, but their cost is negligible.
+            -->
+            <phase>package</phase>
+            <goals>
+              <goal>bundle</goal>
+            </goals>
+            <configuration>
+              <excludeDependencies>true</excludeDependencies>
+              <instructions>
+                <Require-Bundle>org.apache.ant;bundle-version="[1.7.0,2.0.0)"</Require-Bundle>
+              </instructions>
             </configuration>
           </execution>
         </executions>
