--- a/jacoco/pom.xml
+++ b/jacoco/pom.xml
@@ -15,7 +15,7 @@
   <parent>
     <groupId>org.jacoco</groupId>
     <artifactId>org.jacoco.build</artifactId>
-    <version>0.7.9</version>
+    <version>0.7.10-SNAPSHOT</version>
     <relativePath>../org.jacoco.build</relativePath>
   </parent>
 
