--- a/org.jacoco.core.test/pom.xml
+++ b/org.jacoco.core.test/pom.xml
@@ -40,6 +40,37 @@
 
   <profiles>
     <profile>
+      <id>java7-validation</id>
+      <activation>
+        <property>
+          <name>bytecode.version</name>
+          <value>1.7</value>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>build-helper-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>add-source</id>
+                <phase>generate-sources</phase>
+                <goals>
+                  <goal>add-source</goal>
+                </goals>
+                <configuration>
+                  <sources>
+                    <source>src-java7</source>
+                  </sources>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>java8-validation</id>
       <activation>
         <property>
@@ -61,6 +92,7 @@
                 </goals>
                 <configuration>
                   <sources>
+                    <source>src-java7</source>
                     <source>src-java8</source>
                   </sources>
                 </configuration>
@@ -96,6 +128,7 @@
                 </goals>
                 <configuration>
                   <sources>
+                    <source>src-java7</source>
                     <source>src-java8</source>
                   </sources>
                 </configuration>
