Make sure the build runs with Java 5.

--- a/org.jacoco.build/pom.xml
+++ b/org.jacoco.build/pom.xml
@@ -408,7 +408,8 @@
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>exec-maven-plugin</artifactId>
-          <version>1.6.0</version>
+          <!--  latest version which runs with Java 5 -->
+          <version>1.5.0</version>
         </plugin>
         <!-- Third-party plugins -->
         <plugin>
