Relocate 3rd party libs in CLI nodeps JAR (#561)

--- a/org.jacoco.cli/pom.xml
+++ b/org.jacoco.cli/pom.xml
@@ -73,6 +73,24 @@
               <shadedArtifactAttached>true</shadedArtifactAttached>
               <shadedClassifierName>nodeps</shadedClassifierName>
               <minimizeJar>true</minimizeJar>
+              <relocations>
+                <relocation>
+                  <pattern>org.objectweb.asm</pattern>
+                  <shadedPattern>org.jacoco.cli.internal.asm</shadedPattern>
+                </relocation>
+                <relocation>
+                  <pattern>org.kohsuke.args4j</pattern>
+                  <shadedPattern>org.jacoco.cli.internal.args4j</shadedPattern>
+                </relocation>
+                <relocation>
+                  <pattern>org.jacoco.core</pattern>
+                  <shadedPattern>org.jacoco.cli.internal.core</shadedPattern>
+                </relocation>
+                <relocation>
+                  <pattern>org.jacoco.report</pattern>
+                  <shadedPattern>org.jacoco.cli.internal.report</shadedPattern>
+                </relocation>
+              </relocations>
               <transformers>
                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                   <manifestEntries>
