For Java 9 add "Automatic-Module-Name" to manifests of JAR files (#565)

--- a/org.jacoco.build/pom.xml
+++ b/org.jacoco.build/pom.xml
@@ -636,6 +636,7 @@
         <artifactId>maven-bundle-plugin</artifactId>
         <configuration>
           <instructions>
+            <Automatic-Module-Name>${project.artifactId}</Automatic-Module-Name>
             <Bundle-Version>${qualified.bundle.version}</Bundle-Version>
             <Bundle-Name>${project.description}</Bundle-Name>
             <Export-Package>
