Fix build in TRavis
Starting from 1 September 2017 TRavis defaults to "dist: trusty",
on which our build currently fails, because new environment
is quite different from previous "dist: precise".

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ install: true
 # Use container-based infrastructure:
 sudo: false
 
+dist: precise
+addons:
+  hosts:
+    - travis
+  hostname: travis
+
 # Keep Maven local repository between builds:
 cache:
   directories:
