Use default environment in TRavis instead of deprecated
* Ubuntu Trusty instead of Precise
* Maven 3.5.0 (that uses Java 7)
  instead of Maven 3.2.5 (that was using Java 6)
* OpenJDK 6 requires installation

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,10 @@ install: true
 # Use container-based infrastructure:
 sudo: false
 
-dist: precise
 addons:
-  hosts:
-    - travis
-  hostname: travis
+  apt:
+    packages:
+      - openjdk-6-jdk
 
 # Keep Maven local repository between builds:
 cache:
