Add Java 10 support (#629)

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,11 +25,10 @@ env:
     ECJ=true
   - JDK=8-ea
   - JDK=9
-  - JDK=10-ea
+  - JDK=10
 
 matrix:
   allow_failures:
     - env: JDK=8-ea
-    - env: JDK=10-ea
 
 script: ./.travis.sh
