--- a/org.jacoco.build/pom.xml
+++ b/org.jacoco.build/pom.xml
@@ -742,6 +742,24 @@
         <maven.compiler.target>1.8</maven.compiler.target>
       </properties>
     </profile>
+    <profile>
+      <id>java10-validation</id>
+      <activation>
+        <property>
+          <name>bytecode.version</name>
+          <value>10</value>
+        </property>
+      </activation>
+      <properties>
+        <!--
+        Compile into bytecode version 8 by default,
+        because maven-bundle-plugin is unable to proceess bytecode version >=9,
+        this is overridden for tests
+        -->
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+      </properties>
+    </profile>
 
     <!-- This profile is used for compilation with ECJ. -->
     <profile>
