Maven goal `report-aggregate` should consider dependencies specified using version range (#658)

--- a/jacoco-maven-plugin.test/it/it-report-aggregate/pom.xml
+++ b/jacoco-maven-plugin.test/it/it-report-aggregate/pom.xml
@@ -26,6 +26,7 @@
     <module>child1</module>
     <module>child1-test</module>
     <module>child2</module>
+    <module>child2v2</module>
     <module>report</module>
   </modules>
 
