Add module with validation tests for Groovy (#733)

--- a/org.jacoco.build/pom.xml
+++ b/org.jacoco.build/pom.xml
@@ -266,6 +266,7 @@
         <excludes>
           <exclude>**/*.java</exclude>
           <exclude>**/*.kt</exclude>
+          <exclude>**/*.groovy</exclude>
           <exclude>**/*.properties</exclude>
         </excludes>
       </resource>
